--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Awesome Books</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
+  <title>Awesome books</title>
 </head>
 <body>
-   <div id="book-collection">
-  <h1>Awesome Books</h1>
+<div id="book-collection">
+  <h1>All awesome Books</h1>
   <div id="book-list"></div>
+  <h4>Add a new book</h4>
+  <div class="line"></div>
   <form id="add-book-form">
     <label>
       <input type="text" id="book-title" name="book-title" placeholder="Title">
@@ -20,9 +22,7 @@
     </label>
     <button type="submit" id="add-button">Add</button>
   </form>
-  
 </div>
 <script src="./trial.js"></script>
 </body>
 </html>
-
