Modify navigation and modules

--- a/add-new.html
+++ b/add-new.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/add-new.css">
   <title>Awesome books</title>
 </head>
 <body>
@@ -13,8 +13,8 @@
     <h1 id="header">Awesome Books</h1>
     <div class="dugmici">
       <a href="index.html" rel="noopener" id="books-link">List</a>
-    <a href="add-new.html" rel="noopener" id="add-book-link">Add new</a>
-    <a href="contact.html" rel="noopener" id="contact-info-link">Contact</a></div></div>
+      <a href="add-new.html" rel="noopener" id="add-book-link">Add new</a>
+      <a href="contact.html" rel="noopener" id="contact-info-link">Contact</a></div></div>
     <div id="DateTime"></div>
   </nav>
   <section class="book-list">
@@ -25,7 +25,6 @@
   </section>
   <section class="add-book">
     <h4>Add a new book</h4>
-    <div class="line"></div>
     <form id="add-book-form">
       <label>
         <input type="text" id="book-title" name="book-title" placeholder="Title">
