--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/contact.css">
   <title>Awesome books</title>
 </head>
 <body>
@@ -14,27 +14,18 @@
     <div class="dugmici">
       <a href="index.html" rel="noopener" id="books-link">List</a>
     <a href="add-new.html" rel="noopener" id="add-book-link">Add new</a>
-    <a href="contact.html" rel="noopener" id="contact-info-link">Contact</a></div></div>
+    <a href="contack.html" rel="noopener" id="contact-info-link">Contact</a></div></div>
     <div id="DateTime"></div>
   </nav>
-  <section class="book-list">
-  <div id="book-collection">
-    <h1>All awesome books</h1>
-    <div id="book-list"></div>
-    </div>
-  </section>
-  <section class="add-book">
-    <h4>Add a new book</h4>
-    <div class="line"></div>
-    <form id="add-book-form">
-      <label>
-        <input type="text" id="book-title" name="book-title" placeholder="Title">
-      </label>
-      <label>
-        <input type="text" id="author-name" name="author-name" placeholder="Name">
-      </label>
-      <button type="submit" id="add-button">Add</button>
-    </form>
+  <section id="contact">
+    <h1>Contact information</h1>
+    <h2>Do have any question or you just wont to say "Hello"?</h2>
+    <h3>You can reach out to us!</h3>
+    <ul>
+      <li>Our e-mail loremipsum@gmail.com</li>
+      <li>Our phone number: 0043586634422</li>
+      <li>Our address: Streetname 22,84523 City, Coutry</li>
+    </ul> 
   </section>
   <footer id="footer">
     <div class="kockodugic">
